fixed text wrap webgrafia.css

--- a/css/webgrafia.css
+++ b/css/webgrafia.css
@@ -596,6 +596,7 @@ article{
 }
 main a{
   color: inherit;
+  text-wrap: wrap;
 }
 main h1{
   text-align: center;
